# kosher

./: .gitignore  Cargo.toml  GOVERNANCE.md  README.md  halachic_rules.sol  onfig.toml
src/: api.rs  block.rs  blockchain.rs  config.rs  errors.rs  evm.rs  logger.rs  main.rs  mempool.rs  p2p.rs  persistence.rs  validator.rs  wallet.rs  xrpl_witness.rs
tests/: node_integration_test.rs
