[package]
name = "kosher_chain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
rand = "0.8"
hex = "0.4"
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "macros", "tcp", "json"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
axum = "0.7"
# We also need to add the "full" feature to tokio if not already present
tokio = { version = "1", features = ["full"] }
