[package]
name = "kosher_chain"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Main dependencies remain the same ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
rand = "0.8"
hex = "0.4"
revm = "7.1.0"
ethers-core = "2.0"
tokio = { version = "1.32", features = ["full"] }
futures-util = "0.3"
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "macros", "tcp", "json", "noise", "yamux"] }
tower-governor = "0.2"
axum = "0.7"
tower = { version = "0.4", features = ["full"] }
xrpl-rust = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# --- Dependencies for testing only ---
reqwest = { version = "0.11", features = ["json"] }
assert_fs = "1.0"
tokio-test = "0.4.3"
